# asciimath-parser

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
benches/: comparison.rs  examples.rs  prefix_map.rs
src/: lib.rs  parse.rs  tokenizer.rs  tree.rs
src/prefix_map/: fst.rs  hash.rs  linear.rs  mod.rs  trie.rs
tests/: prefix_map.rs
